<resources>
    <string name="app_name">SAKB FANTASY</string>
    <string name="app_logo">app logo</string>
    <string name="login">Login</string>
    <string name="login_title">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_title">Create account</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="loagin_ac">Login</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="forgotpass_title">Forgot password</string>
    <string name="forgot_desc">Enter an email here, we will send you a new message to create new password</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="action_edit" translatable="false">Edit Profile</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="news_title">News</string>
    <string name="contactus_title">Contact us</string>
    <string name="send_message_to_app_management">Send message to app management</string>
    <string name="message_title">Message Title</string>
    <string name="content">Content</string>
    <string name="About_club">About club</string>
    <string name="hmoe_ditem">Home</string>
    <string name="football_team">Football team</string>
    <string name="others_games">Other games</string>
    <string name="matches">Matches</string>
    <string name="results">Results</string>
    <string name="Calendar">Calendar</string>
    <string name="championship">Championships</string>
    <string name="audience">The audience</string>
    <string name="logout">Log out</string>
    <string name="my_profile">My profile</string>
    <string name="past_matches">previous Matches</string>
    <string name="next_matches">Next Matches</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="state">State</string>
    <string name="riyadh">Riyadh</string>
    <string name="jeddah">Jeddah</string>
    <string name="need_internet">Need Internet to Work</string>
    <string name="something_wrong">Something is wrong !!</string>
    <string name="all_fileds_must_filled">Please fill All fields !!</string>
    <string name="required_field">Field required</string>
    <string name="select_city">Select your city !</string>
    <string name="pass_not_match">Password and confirm password does not match !</string>
    <string name="person_photo">Person photo</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="my_tickets">My Tickets</string>
    <string name="plot_game">Plot game</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="reload_page_plz">error happened reload this page and retry!</string>
    <string name="permissions_info_sd">SDCard access is required, please grant the permission in settings!</string>
    <string name="was_canceled">Upload image was cancelled!</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="are_sure_logout">Are you sure want to logout?</string>
    <string name="latest_news">Latest news</string>
    <string name="latest_videos">Latest videos</string>
    <string name="latest_albums">Latest albuns</string>
    <string name="latest_products">Latest products</string>
    <string name="more">More</string>
    <string name="store">Store</string>
    <string name="bacground">bacground</string>
    <string name="book_ticket">Book your ticket now</string>
    <string name="next_match_">Next Match</string>
    <string name="book_your_ticket">Book your ticket now</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="videos">Videos</string>
    <string name="album">Album</string>
    <string name="categories">Categories</string>
    <string name="rs">" SR "</string>
    <string name="cart">Cart</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="order_now">Order now</string>
    <string name="product">"Product "</string>
    <string name="details">"Details "</string>
    <string name="cost_cart">Cost</string>
    <string name="discount">Discount</string>
    <string name="discou">Discount</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="total_amount">Total amount</string>
    <string name="size">"Size: "</string>
    <string name="quant">"Quantity "</string>
    <string name="confirm_the_order">Confirm the order</string>
    <string name="sub_categories">Sub Category</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="choose_size">Choose size</string>
    <string name="choose_quantity">Choose Quantity</string>
    <string name="order_one_item">You should at least order one item!</string>
    <string name="select_sz">You need to select size before add to cart!</string>
    <string name="select_color">You need to select color before add to cart!</string>
    <string name="price">Price</string>
    <string name="GOOGLE_API_KEY" translatable="false">AIzaSyAUkwqMVgh1zzX5YVVGLdasUUP7_GIkgU8</string>
    <string name="det">Details</string>
    <string name="snackmessage">Oops! It seems like you don\'t have internet connection</string>
    <string name="retry">Retry</string>
    <string name="newest_products">Newest Products</string>
    <string name="go_to_home">Home</string>
    <string name="thank_cart_success">Thank you\n Your purchase was successful</string>
    <string name="sorry_fail_success">Sorry,\n your purchase has failed</string>
    <string name="try_again">Try again</string>
    <string name="data_err_fail">There is an error in your payment data, please review your data again</string>
    <string name="comments">Comments</string>
    <string name="leave_comment">Add a comment</string>
    <string name="write_cmnt_here">Write your comment here</string>
    <string name="send_cmnt">Send comment</string>
    <string name="sortby">Sort By</string>
    <string name="newest">Newest</string>
    <string name="best_selling">Best-selling</string>
    <string name="price_is_from_top_to_bottom">Price from top to lowest</string>
    <string name="price_is_from_bottom_to_top">Price from lowest to highest</string>
    <string name="products_">Products</string>
    <string name="choose_color">Choose color</string>
    <string name="no_color_available">No colors available</string>
    <string name="fees">Fees</string>
    <string name="show">show</string>
    <string name="savee">Save</string>
    <string name="add_print_name">Add Print Name</string>
    <string name="okkk">OK</string>
    <string name="enter_print_name">Enter Team Name…</string>
    <string name="name_optional">Name (optional)</string>
    <string name="empty_comment_msh">You can\'t send empty comment!</string>
    <string name="cat_player">Category</string>
    <string name="checkout_ui_callback_scheme" translatable="false">checkoutui</string>
    <string name="payment_button_callback_scheme" translatable="false">paymentbutton</string>
    <string name="custom_ui_callback_scheme" translatable="false">customui</string>
    <string name="checkout_ui_title" translatable="false">Ready-to-Use UI</string>
    <string name="payment_button_title" translatable="false">Payment Button</string>
    <string name="custom_ui_title" translatable="false">SDK &amp; Your Own UI</string>
    <string name="checkout_immediately_with" translatable="false">Checkout immediately with</string>
    <string name="sdk_version_number" translatable="false">mobile sdk v%s</string>
    <string name="visa" translatable="false">VISA</string>
    <string name="card_holder_hint" translatable="false">Card Holder</string>
    <string name="card_number_hint" translatable="false">Card Number</string>
    <string name="card_expiry_month_hint" translatable="false">MM</string>
    <string name="card_expiry_year_hint" translatable="false">YY</string>
    <string name="card_cvv_hint" translatable="false">CVV</string>
    <string name="date_delimiter" translatable="false">/</string>
    <string name="button_ok" translatable="false">OK</string>
    <string name="button_cancel" translatable="false">Cancel</string>
    <string name="button_proceed_to_checkout" translatable="false">PROCEED TO CHECKOUT</string>
    <string name="button_pay_now" translatable="false">PAY NOW</string>
    <string name="message_successful_payment" translatable="false">The payment was successful</string>
    <string name="message_unsuccessful_payment" translatable="false">"The payment was unsuccessful"</string>
    <string name="message_payment_confirmation" translatable="false">Payment of %1$s %2$s will be executed</string>
    <string name="progress_message_please_wait" translatable="false">Please wait…</string>
    <string name="progress_message_checkout_id" translatable="false">Getting the checkout id…</string>
    <string name="progress_message_checkout_info" translatable="false">Getting the checkout info…</string>
    <string name="progress_message_payment_status" translatable="false">Getting the payment status…</string>
    <string name="progress_message_processing_payment" translatable="false">Processing payment…</string>
    <string name="error_message" translatable="false">An error occurred</string>
    <string name="error_empty_fields" translatable="false">The fields must not be empty</string>
    <string name="team">Teams</string>
    <string name="home">Home</string>
    <string name="my_points">My Points</string>
    <string name="my_team">My Team</string>
    <string name="how_to_play">How to Play</string>
    <string name="news">News</string>
    <string name="terms">Terms and Conditions</string>
    <string name="statistics">Statistics</string>
    <string name="fixtures">Fixtures</string>
    <string name="choose_team">Pick Team</string>
    <string name="help">Help</string>
    <string name="transfers">Transfers</string>
    <string name="change_pass">Change password</string>
    <string name="create_or_join_league">My League</string>
    <string name="join_league">Join league</string>
    <string name="join_league_description">Join a private league if you have its own code.</string>
    <string name="special_league">Special league</string>
    <string name="powerful_league">Powerful league</string>
    <string name="create_a_league">Create a league</string>
    <string name="create_a_league_to_compete_with_you_and_your_friends_and_invite_them_to_join_you_via_mobile_number_or_code">Create a league to compete with you and your friends</string>
    <string name="classic">Classic</string>
    <string name="head_to_head">Head to Head</string>
    <string name="join_to_special_league">Join to special league</string>
    <string name="create_classic_league">Create a classic league</string>
    <string name="Join_the_strongest_leagues">Join the strongest leagues</string>
    <string name="join_now">Join Now</string>
    <string name="order">Order</string>
    <string name="create_head_to_head_label">Create Head to head league</string>
    <string name="league_management">League Management</string>
    <string name="my_leagues">My Leagues</string>
    <string name="match_details">Match Details</string>
    <string name="award">Award</string>
    <string name="language">العربية</string>
    <string name="standing">Standing</string>
    <string name="rankingMatche">Ranking Matches</string>
</resources>