<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view"
     >

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/homeFragment"
                android:title="@string/home"/>

        <item
            android:id="@+id/myTeamFragment"
            android:title="@string/my_team"/>

        <item
                android:id="@+id/myPointsFragment"
                android:title="@string/my_points"/>

        <item
            android:id="@+id/transfersFragment"
            android:title="@string/transfers"/>

        <item
                android:id="@+id/howToPlayFragment"
                android:title="@string/how_to_play"/>

        <item
            android:id="@+id/helpFragment"
            android:title="@string/help"/>

        <item
                android:id="@+id/newsFragment"
                android:title="@string/news"/>
        <item
                android:id="@+id/videosFragment"
                android:title="@string/videos"/>

        <item
                android:id="@+id/statisticsFragment"
                android:title="@string/statistics"/>

        <item
                android:id="@+id/nav_videcom"
                android:title="@string/fixtures"/>

      <item
                android:id="@+id/contactUsFragment"
                android:title="@string/contactus_title"/>
        <item
                android:id="@+id/logoutFragment"
                android:title="@string/logout"/>
    </group>



</menu>
