<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.sakb.spl.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_homeFragment_to_chooseTeamPlayersFragment"
            app:destination="@id/chooseTeamPlayersFragment" />
        <action
            android:id="@+id/action_homeFragment_to_moreMatches"
            app:destination="@id/matchesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_myPoints"
            app:destination="@id/myPointsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_myTeam"
            app:destination="@id/myTeamFragment" />
        <action
            android:id="@+id/action_homeFragment_to_trans"
            app:destination="@id/transfersFragment" />

    </fragment>

    <fragment
        android:id="@+id/videosFragment"
        android:name="com.sakb.spl.ui.videos.VideosFragment"
        android:label="@string/videos"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/chooseTeamPlayersFragment"
        android:name="com.sakb.spl.ui.chooseteamplayers.ChooseTeamPlayersFragment"
        android:label="@string/choose_team"
        tools:layout="@layout/choose_team_players_fragment" />

    <fragment
        android:id="@+id/termsFragment"
        android:name="com.sakb.spl.ui.terms.TermsFragment"
        android:label="@string/terms"
        tools:layout="@layout/fragment_terms" />

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.sakb.spl.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />


    <fragment
        android:id="@+id/myPointsFragment"
        android:name="com.sakb.spl.ui.mypoints.MyPointsFragment"
        android:label="@string/my_points"
        tools:layout="@layout/fragment_my_points" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.sakb.spl.ui.statistics.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statisitcs" />

    <fragment
        android:id="@+id/awardFragment"
        android:name="com.sakb.spl.ui.award.AwardFragment"
        android:label="@string/award"
        tools:layout="@layout/fragment_award" />

    <fragment
        android:id="@+id/logoutFragment"
        android:name="com.sakb.spl.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.sakb.spl.ui.contactus.ContactUsFragment"
        android:label="@string/contactus_title"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.sakb.spl.ui.help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_helps" />

    <fragment
        android:id="@+id/howToPlayFragment"
        android:name="com.sakb.spl.ui.howtoplay.HowToPlayFragment"
        android:label="@string/how_to_play"
        tools:layout="@layout/how_to_play_fragment" />


    <fragment
        android:id="@+id/myTeamFragment"
        android:name="com.sakb.spl.ui.myteam.MyTeamFragment"
        android:label="@string/my_team"
        tools:layout="@layout/fragment_my_team" />


    <fragment
        android:id="@+id/transfersFragment"
        android:name="com.sakb.spl.ui.transfers.TransfersFragment"
        android:label="@string/transfers"
        tools:layout="@layout/fragment_transfers">
        <action
            android:id="@+id/action_transfersFragment_to_transfersActionFragment"
            app:destination="@id/transfersActionFragment" />
    </fragment>

    <fragment
        android:id="@+id/myProfileFragment"
        android:name="com.sakb.spl.ui.myprofile.MyProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_my_profile">
        <action
            android:id="@+id/action_myProfileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_myProfileFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.sakb.spl.ui.editprofile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.sakb.spl.ui.changepassword.ChangePasswordFragment"
        android:label="@string/change_pass"
        tools:layout="@layout/fragment_change_password" />

    <fragment
        android:id="@+id/matchesFragment"
        android:name="com.sakb.spl.ui.matches.MatchesFragment"
        android:label="@string/matches"
        tools:layout="@layout/matches_fragment">
        <action
            android:id="@+id/action_matchesFragment_to_matchDetailsFragment"
            app:destination="@id/matchDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/matchDetailsFragment"
        android:name="com.sakb.spl.ui.matches.MatchDetailsFragment"
        android:label="@string/match_details"
        tools:layout="@layout/fragment_match_details">
        <argument
            android:name="matchDetails"
            app:argType="com.sakb.spl.data.model.DataItemSubFix" />
    </fragment>
    <fragment
        android:id="@+id/leagueFragment"
        android:name="com.sakb.spl.ui.league.LeagueFragment"
        android:label="@string/create_or_join_league"
        tools:layout="@layout/league_fragment">
        <action
            android:id="@+id/action_leagueFragment_to_specialLeagueFragment"
            app:destination="@id/specialLeagueFragment" />
        <action
            android:id="@+id/action_leagueFragment_to_createClassicLeagueFragment"
            app:destination="@id/createClassicLeagueFragment" />
        <action
            android:id="@+id/action_leagueFragment_to_joinToPowerfulLeagueFragment"
            app:destination="@id/joinToPowerfulLeagueFragment" />
        <action
            android:id="@+id/action_leagueFragment_to_createHeadToHeadLeagueFragment"
            app:destination="@id/createHeadToHeadLeagueFragment" />
        <action
            android:id="@+id/action_leagueFragment_to_MyLeagueFragment"
            app:destination="@id/myLeaguesFragment" />
    </fragment>
    <fragment
        android:id="@+id/specialLeagueFragment"
        android:name="com.sakb.spl.ui.specialleague.SpecialLeagueFragment"
        android:label="@string/join_to_special_league"
        tools:layout="@layout/special_league_fragment">
        <argument
            android:name="type"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/createClassicLeagueFragment"
        android:name="com.sakb.spl.ui.classicleague.CreateClassicLeagueFragment"
        android:label="@string/create_classic_league"
        tools:layout="@layout/create_classic_league_fragment">
        <action
            android:id="@+id/action_createClassicLeagueFragment_to_MyLeagueFragment"
            app:destination="@id/myLeaguesFragment" />
        <action
            android:id="@+id/action_createClassicLeagueFragment_to_ManagementLeagueFragment"
            app:destination="@id/manageLeagueFragment" />
    </fragment>
    <fragment
        android:id="@+id/joinToPowerfulLeagueFragment"
        android:name="com.sakb.spl.ui.powerfulleague.JoinToPowerfulLeagueFragment"
        android:label="@string/Join_the_strongest_leagues"
        tools:layout="@layout/join_to_powerful_league_fragment" />
    <fragment
        android:id="@+id/createHeadToHeadLeagueFragment"
        android:name="com.sakb.spl.ui.headtoheadleague.CreateHeadToHeadLeagueFragment"
        android:label="@string/create_head_to_head_label"
        tools:layout="@layout/create_head_to_head_league_fragment">
        <action
            android:id="@+id/action_createHeadToHeadLeagueFragment_to_MyLeagueFragment"
            app:destination="@id/myLeaguesFragment" />
        <action
            android:id="@+id/action_createHeadToHeadLeagueFragment_to_ManagementLeagueFragment"
            app:destination="@id/manageLeagueFragment" />
    </fragment>

    <fragment
        android:id="@+id/languageFragment"
        android:name="com.sakb.spl.ui.language.LanguageFragment"
        android:label="@string/language"
        tools:layout="@layout/fragment_language" />

    <fragment
        android:id="@+id/transfersActionFragment"
        android:name="com.sakb.spl.ui.transfers.TransfersActionsFragment"
        android:label="@string/transfers"
        tools:layout="@layout/fragment_transfers_actions">
        <argument
            android:name="playersSubtitle"
            app:argType="com.sakb.spl.data.model.PlayersSubtitle" />
    </fragment>

    <fragment
        android:id="@+id/myLeaguesFragment"
        android:name="com.sakb.spl.ui.myleague.MyLeagueFragment"
        android:label="@string/my_leagues"
        tools:layout="@layout/fragment_my_league">
        <action
            android:id="@+id/action_MyLeagueFragment_to_StandingFragment"
            app:destination="@id/standingFragment" />
        <action
            android:id="@+id/action_MyLeagueFragment_to_ManageLeagueFragment"
            app:destination="@id/manageLeagueFragment" />
        <action
            android:id="@+id/action_MyLeagueFragment_to_StandingHeadToHeadFragment"
            app:destination="@id/standingHeadToHeadFragment" />
    </fragment>

    <fragment
        android:id="@+id/standingFragment"
        android:name="com.sakb.spl.ui.standing.StandingFragment"
        android:label="@string/standing"
        tools:layout="@layout/standing_fragment">
        <argument
            android:name="link"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/manageLeagueFragment"
        android:name="com.sakb.spl.ui.manageleague.ManageLeagueFragment"
        android:label="@string/league_management"
        tools:layout="@layout/manage_league_fragment">
        <argument
            android:name="link"
            app:argType="string" />
        <argument
            android:name="type"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/standingHeadToHeadFragment"
        android:name="com.sakb.spl.ui.standingheadtohead.StandingHeadToHeadFragment"
        android:label="@string/standing"
        tools:layout="@layout/standing_head_to_head_fragment">
        <argument
            android:name="link"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/rankingMatches"
        android:name="com.sakb.spl.ui.leagueorder.LeagueOrderFragment"
        android:label="@string/rankingMatche"
        tools:layout="@layout/league_order_fragment" />
</navigation>